openjdk23/jdk/test/langtools/tools/javac/annotations/neg/ObjectMembers.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@ObjectMembers(hashCode = 23)
@interface ObjectMembers {}
